--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "thriveva-desktop-app",
   "version": "0.1.0",
   "main": "public/electron.js",
+  "proxy": "http://localhost:4301",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.18.2",
@@ -17,6 +18,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "electron-is-dev": "^2.0.0",
+    "proxy": "^1.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
