--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "electron-is-dev": "^2.0.0",
+    "html2canvas": "^1.4.1",
     "proxy": "^1.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "use-react-screenshot": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
