finished with dual monitor screenshots , 20 min functionality , api integrations

--- a/package.json
+++ b/package.json
@@ -17,15 +17,25 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "electron-browser-storage": "^1.0.7",
+    "electron-fetch": "^1.7.4",
     "electron-is-dev": "^2.0.0",
+    "electron-json-storage": "^4.5.0",
+    "electron-store": "^8.0.2",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^10.1.0",
     "html2canvas": "^1.4.1",
+    "knex": "^2.1.0",
+    "moment": "^2.29.3",
     "node": "^18.4.0",
+    "node-webcam": "^0.8.0",
     "path": "^0.12.7",
     "proxy": "^1.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "rimraf": "^3.0.2",
     "styled-components": "^5.3.5",
     "uiohook-napi": "^1.2.0",
     "use-react-screenshot": "^3.0.0",
