--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "thriveva-desktop-app",
   "version": "0.1.0",
+  "build": {
+    "appId": "com.thriveva_timeTracker"
+    },
   "main": "public/electron.js",
+  "homepage": "./",
   "description": "time tracker app",
   "proxy": "http://localhost:4301",
   "private": true,
@@ -46,8 +50,13 @@
   "scripts": {
     "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
     "electron": "wait-on tcp:3000 && electron .",
+    "electron-build": "electron-builder",
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-eject": "react-scripts eject",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn react-build && yarn electron-build",
+    "release": "yarn react-build && electron-builder --publish=always",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
