--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
+    "dev": "concurrently -k \"npm start\" \"npm:electron\"",
     "electron": "wait-on tcp:3000 && electron .",
     "electron-build": "electron-builder",
     "react-start": "react-scripts start",
