--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "build": {
     "appId": "com.thriveva_timeTracker",
     "mac": {
-      "icon": "./public/icon.icns",  
+      "icon": "./public/icon.icns",
       "category": "public.app-category.utilities"
     },
     "win": {
-      "icon": "./public/icons.icns" 
+      "icon": "./public/app-logo.ico"
     },
     "files": [
       "./build/**/*",
       "./dist/**/*",
       "./node_modules/**/*",
-      "./public/**/*",  
+      "./public/**/*",
       "*.js"
     ],
     "directories": {
-      "buildResources": "public" 
+      "buildResources": "public"
     }
   },
   "mac": {
@@ -50,6 +50,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "electron-browser-storage": "^1.0.7",
     "electron-fetch": "^1.7.4",
     "electron-is-dev": "^2.0.0",
