--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-idle-timer": "^5.4.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "uiohook-napi": "^1.2.0",
