--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "target": "deb"
   },
   "main": "public/electron.js",
-  "homepage": "https://www.thriveva.com/",
+  "homepage": "./",
   "description": "time tracker app",
   "proxy": "http://localhost:4301",
   "private": true,
@@ -56,6 +56,7 @@
     "react-idle-timer": "^5.4.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.5.3",
     "uiohook-napi": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
