--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thriveva-desktop-app",
   "author": "IT OUTSOURCE PH",
-  "version": "1.5.39",
+  "version": "1.5.40",
   "build": {
     "appId": "com.thriveva_timeTracker",
     "productName": "ThriveVA Desktop App",
@@ -54,6 +54,7 @@
     "axios": "^0.27.2",
     "electron-download-manager": "^2.1.2",
     "electron-is-dev": "^2.0.0",
+    "electron-log": "^5.0.0-beta.23",
     "electron-store": "^8.0.2",
     "electron-updater": "^5.3.0",
     "fs-extra": "^10.1.0",
