--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@mui/styles": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "active-win": "^8.1.0",
     "axios": "^0.27.2",
     "electron-download-manager": "^2.1.2",
     "electron-is-dev": "^2.0.0",
