--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@miniben90/x-win": "^1.3.1",
     "@mui/icons-material": "^5.8.2",
     "@mui/lab": "^5.0.0-alpha.84",
     "@mui/material": "^5.8.2",
     "@mui/styles": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "active-win": "^8.1.0",
     "axios": "^0.27.2",
     "electron-download-manager": "^2.1.2",
     "electron-is-dev": "^2.0.0",
