--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "klever-desktop-app",
   "author": "IT OUTSOURCE PH",
-  "version": "1.6.1",
+  "version": "1.7.0",
   "build": {
     "appId": "com.klever_timeTracker",
     "productName": "Klever Desktop App",
@@ -65,6 +65,7 @@
     "react-idle-timer": "^5.4.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "screenshot-desktop": "^1.15.0",
     "socket.io-client": "^4.5.3",
     "uiohook-napi": "^1.2.0",
     "web-vitals": "^2.1.4"
