--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "klever-desktop-app",
-  "author": "IT OUTSOURCE PH",
+  "author": "Klever",
   "version": "1.5.57",
   "build": {
     "appId": "com.klever_timeTracker",
     "productName": "Klever Desktop App",
+    "afterSign": "./afterSignHook.js",
     "mac": {
       "icon": "./public/icon.icns",
-      "category": "public.app-category.utilities"
+      "category": "public.app-category.utilities",
+      "hardenedRuntime": true,
+      "entitlements": "./entitlements.mac.plist"
     },
     "win": {
       "icon": "./public/app-logo.ico",
@@ -82,7 +85,7 @@
     "deploy": "electron-builder build --win --publish always",
     "release": "yarn react-build && electron-builder --publish=always",
     "test": "react-scripts test",
-    "electron:package:mac": "yarn build && electron-builder -m -c.extraMetadata.main=build/electron.js",
+    "electron:package:mac": "yarn build && export CSC_LINK='/Users/nat/Downloads/Desktop-App/Certificates2.p12' CSC_KEY_PASSWORD='12345' CSC_INSTALLER_LINK='/Users/nat/Downloads/Desktop-App/Certificates.p12' CSC_INSTALLER_KEY_PASSWORD='12345' APPLE_ID='natsventures@gmail.com' APPLE_ID_PASSWORD='wyjv-ucmp-kuur-nvsj' && electron-builder -m -c.extraMetadata.main=build/electron.js",
     "electron:package:win": "yarn build && electron-builder -w -c.extraMetadata.main=build/electron.js",
     "electron:package:linux": "yarn build && electron-builder -l -c.extraMetadata.main=build/electron.js",
     "eject": "react-scripts eject"
@@ -106,9 +109,11 @@
     ]
   },
   "devDependencies": {
+    "@electron/notarize": "^2.2.0",
     "concurrently": "5.2.0",
     "electron": "^19.0.1",
     "electron-builder": "^23.6.0",
+    "electron-builder-notarize": "^1.5.1",
     "wait-on": "5.1.0"
   }
 }
