feat: Add package:publish

--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "electron:package:win": "yarn build && electron-builder --win -c.extraMetadata.main=build/electron.js",
     "electron:package:linux": "yarn build && electron-builder --linux -c.extraMetadata.main=build/electron.js",
     "electron:package:multi": "yarn build && electron-builder --mac --win -c.extraMetadata.main=build/electron.js",
-    "publish": "export GH_TOKEN=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 && yarn build && electron-builder --mac --win -c.extraMetadata.main=build/electron.js --publish always",
+    "package:publish": "export GH_TOKEN=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 && yarn build && electron-builder --mac --win -c.extraMetadata.main=build/electron.js --publish always",
     "eject": "react-scripts eject",
     "refresh": "shx rm -rf electron-build"
   },
