--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "electron:package:linux": "yarn build && electron-builder --linux -c.extraMetadata.main=build/electron.js",
     "electron:package:multi": "yarn build && electron-builder --mac --win -c.extraMetadata.main=build/electron.js",
     "package:publish": "export GH_TOKEN=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 && yarn build && electron-builder --mac --win -c.extraMetadata.main=build/electron.js --publish always",
-    "refresh": "shx rm -rf electron-build"
+    "refresh": "shx rm -rf electron-build build"
   },
   "eslintConfig": {
     "extends": [
