fix: Update publish CLI

--- a/package.json
+++ b/package.json
@@ -77,11 +77,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron:package:mac": "yarn build && electron-builder --mac -c.extraMetadata.main=build/electron.js",
-    "electron:package:win": "yarn build && electron-builder --win -c.extraMetadata.main=build/electron.js",
-    "electron:package:linux": "yarn build && electron-builder --linux -c.extraMetadata.main=build/electron.js",
-    "electron:package:multi": "yarn build && electron-builder --mac --win -c.extraMetadata.main=build/electron.js",
-    "package:publish": "export GH_TOKEN=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 && yarn build && electron-builder --mac --win -c.extraMetadata.main=build/electron.js --publish always",
+    "package:win": "yarn build && electron-builder --win -c.extraMetadata.main=build/electron.js",
+    "package:mac": "yarn build && electron-builder --mac -c.extraMetadata.main=build/electron.js",
+    "package:linux": "yarn build && electron-builder --linux -c.extraMetadata.main=build/electron.js",
+    "publish:win": "set GH_TOKEN=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 && yarn package:win --publish always",
+    "publish:mac": "export GH_TOKEN=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 && yarn package:mac --publish always",
+    "publish:linux": "export GH_TOKEN=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 && yarn package:linux --publish always",
     "refresh": "shx rm -rf electron-build build"
   },
   "eslintConfig": {
