--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "concurrently -k \"npm start\" \"npm:electron\"",
+    "dev": "concurrently -k \"yarn start\" \"yarn electron\"",
     "electron": "wait-on tcp:3000 && electron .",
     "start": "react-scripts start",
     "build": "react-scripts build",
