refactor: upgrade concurrently

--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
   },
   "devDependencies": {
     "@electron/notarize": "^2.2.0",
-    "concurrently": "5.2.0",
+    "concurrently": "^8.2.2",
     "electron": "28.1.0",
     "electron-builder": "24.9.1",
     "shx": "^0.3.4",
