--- a/package.json
+++ b/package.json
@@ -114,6 +114,6 @@
     "electron": "28.1.0",
     "electron-builder": "24.9.1",
     "shx": "^0.3.4",
-    "wait-on": "5.1.0"
+    "wait-on": "^7.2.0"
   }
 }
