--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eject": "react-scripts eject",
     "package:win": "yarn build && electron-builder --win -c.extraMetadata.main=build/electron.js",
     "package:mac": "yarn build && export CSC_LINK='./CSC.p12' CSC_KEY_PASSWORD='12345' CSC_INSTALLER_LINK='./CSCInstaller.p12' CSC_INSTALLER_KEY_PASSWORD='12345' APPLE_ID='natsventures@gmail.com' APPLE_APP_SPECIFIC_PASSWORD='wyjv-ucmp-kuur-nvsj' && electron-builder --mac -c.extraMetadata.main=build/electron.js",
+    "package:mac:dev": "yarn build && electron-builder --mac -c.extraMetadata.main=build/electron.js",
     "package:linux": "yarn build && electron-builder --linux -c.extraMetadata.main=build/electron.js",
     "publish:win": "set GH_TOKEN=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 && yarn package:win --publish always",
     "publish:mac": "export GH_TOKEN=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 && yarn package:mac --publish always",
