--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-latest
-            node_js: "16"
           - os: macos-latest
+            node_js: "16"
+          - os: windows-latest
             node_js: "16"
 
     env:
@@ -35,18 +35,10 @@ jobs:
 
       - name: Build Electron app
         run: |
-          if [ "$RUN_ON" == "linux" ]; then
-            docker run --rm \
-              --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
-              -v ${PWD}:/project \
-              -v ~/.cache/electron:/root/.cache/electron \
-              -v ~/.cache/electron-builder:/root/.cache/electron-builder \
-              electronuserland/builder:wine \
-              /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release --linux --win"
-          elif [ "$RUN_ON" == "macos" ]; then
+          if [ "$RUN_ON" == "macos" ]; then
             yarn release --mac
-          else
-            yarn release
+          elif [ "$RUN_ON" == "windows" ]; then
+            yarn release --win
           fi
 
       - name: Create Release
