--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,11 +50,20 @@ jobs:
           draft: true
           prerelease: false
 
-      - name: Upload Release Asset
-        id: upload-release-asset
+      - name: Upload Release Asset (macOS)
+        id: upload-release-asset-macos
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./path/to/your/release/assets
-          asset_name: your-asset-name.ext
+          asset_path: ./dist/*.zip  # Matches all zip files in the dist directory
+          asset_name: Klever-macos-${{ github.run_number }}.zip  # Adjust as needed
+          asset_content_type: application/zip
+
+      - name: Upload Release Asset (Windows)
+        id: upload-release-asset-windows
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/*.exe  # Matches all exe files in the dist directory
+          asset_name: Klever-win-${{ github.run_number }}.exe  # Adjust as needed
           asset_content_type: application/octet-stream
