--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           tag_name: v${{ github.run_number }}
           release_name: Release ${{ github.run_number }}
-          draft: false
+          draft: true
           prerelease: false
 
       - name: Upload Release Asset (macOS)
@@ -43,6 +43,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/*.dmg  # Matches all dmg files in the dist directory
+          asset_path: ./electron-build/*.dmg  # Matches all dmg files in the dist directory
           asset_name: Klever-macos-${{ github.run_number }}.dmg  # Adjust as needed
           asset_content_type: application/x-apple-diskimage
