--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "linux": {
     "target": "deb"
   },
-  "main": "public/electron.js",
+  "main": "build/electron.js",
   "homepage": "./",
   "description": "time tracker app",
   "proxy": "https://app.useklever.com",
