--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -25,24 +25,6 @@ jobs:
         run: |
           yarn --frozen-lockfile
 
-      - name: Build Electron app
+      - name: Publish Electron app
         run: |
-          yarn release --win
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        with:
-          tag_name: v${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Asset (Windows)
-        id: upload-release-asset-windows
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/*.exe  # Matches all exe files in the dist directory
-          asset_name: Klever-win-${{ github.run_number }}.exe  # Adjust as needed
-          asset_content_type: application/octet-stream
+          yarn publish:win
