--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -25,5 +25,5 @@ jobs:
         run: npm install -f
     
       - name: Build and Publish
-        run: npm run publish:win
+        run: CI=false npm run publish:win
 
