Update API base URL and proxy configuration

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_BASE_URL="https://app.useklever.com/api"
+REACT_APP_API_BASE_URL="https://app.klever.work/api"
 BROWSER=none
 GH_TOKEN=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
