--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "klever-desktop-app",
   "author": "IT OUTSOURCE PH",
-  "version": "1.8.8",
+  "version": "1.9.0",
   "build": {
     "appId": "com.klever_timeTracker",
     "productName": "Klever Desktop App",
@@ -58,6 +58,10 @@
     "@mui/styles": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@microsoft/applicationinsights-core-js": "^3.1.2",
+    "@microsoft/applicationinsights-react-js": "17.1.2",
+    "@microsoft/applicationinsights-web": "^3.1.2",
+    "applicationinsights": "^2.9.5",
     "axios": "^0.27.2",
     "electron-download-manager": "^2.1.2",
     "electron-is-dev": "^2.0.0",
