--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "klever-desktop-app",
+  "name": "klever-desktop-app-dev",
   "author": "IT OUTSOURCE PH",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "build": {
-    "appId": "com.klever_timeTracker",
+    "appId": "com.klever_timeTracker_dev",
     "productName": "Klever Desktop App",
     "mac": {
       "icon": "./public/icon-new.icns",
@@ -51,6 +51,9 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/inter": "^5.0.15",
+    "@microsoft/applicationinsights-core-js": "^3.1.2",
+    "@microsoft/applicationinsights-react-js": "17.1.2",
+    "@microsoft/applicationinsights-web": "^3.1.2",
     "@miniben90/x-win": "^1.3.1",
     "@mui/icons-material": "^5.8.2",
     "@mui/lab": "^5.0.0-alpha.84",
@@ -58,14 +61,10 @@
     "@mui/styles": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@microsoft/applicationinsights-core-js": "^3.1.2",
-    "@microsoft/applicationinsights-react-js": "17.1.2",
-    "@microsoft/applicationinsights-web": "^3.1.2",
     "applicationinsights": "^2.9.5",
     "axios": "^0.27.2",
     "electron-download-manager": "^2.1.2",
     "electron-is-dev": "^2.0.0",
-    "electron-log": "^5.0.0-beta.23",
     "electron-store": "^8.0.2",
     "electron-updater": "^5.3.0",
     "fs-extra": "^10.1.0",
@@ -78,7 +77,8 @@
     "screenshot-desktop": "^1.15.0",
     "socket.io-client": "^4.5.3",
     "uiohook-napi": "^1.5.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "winston": "^3.13.0"
   },
   "scripts": {
     "dev": "concurrently -k \"yarn start\" \"yarn electron\"",
