--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "klever-desktop-app",
   "author": "IT OUTSOURCE PH",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "build": {
     "appId": "com.klever_timeTracker",
     "productName": "Klever Desktop App",
@@ -76,7 +76,7 @@
     "react-scripts": "5.0.1",
     "screenshot-desktop": "^1.15.0",
     "socket.io-client": "^4.5.3",
-    "uiohook-napi": "^1.5.3",
+    "uiohook-napi": "1.5.2",
     "web-vitals": "^2.1.4",
     "winston": "^3.13.0"
   },
